# HashMate

./: .gitignore  README.md  pyproject.toml
scripts/: run.ps1  run.sh
src/hashmate/: __init__.py  app.py  hasher.py  parser.py
tests/: test_parser.py
