[project]
name = "hashmate"
version = "0.1.0"
description = "Hash validator with smart parsing of free-form text, built on PySide6"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyside6>=6.7",
]

[project.scripts]
hashmate = "hashmate.app:main"

[dependency-groups]
dev = [
    "pillow>=12.3.0",
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hashmate"]

# --------------------------------------------------------------------------- #
# ruff：格式化 + import 排序
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle 错误
    "F",    # pyflakes
    "I",    # isort（import 排序）
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["hashmate"]
force-single-line = false

[tool.ruff.format]
quote-style = "double"
